log
vi., 10 de mar. de 2023  8:54:00: 
 tests:  0|7
total_score: 0/70
a0af0fa
Fri 10 Mar 2023 09:04:25 PM UTC: 
 tests:  0|7
total_score: 0/70
231292c
Fri 10 Mar 2023 09:30:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:8: error: unused variable ‘b2’ [-Werror=unused-variable]
   16 | int a2,b2;
      |        ^~
exercises.c:16:5: error: unused variable ‘a2’ [-Werror=unused-variable]
   16 | int a2,b2;
      |     ^~
cc1: all warnings being treated as errors
Compilation failed
f0f6eea
Fri 10 Mar 2023 09:32:17 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|6
total_score: 10/70
e0c10a1
Fri 10 Mar 2023 09:36:14 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
08b601b
Fri 10 Mar 2023 10:01:50 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:112:18: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  112 |      c[i] = a[i] + b[i];
      |             ~~~~ ^ ~~~~
      |              |      |
      |              Vector Vector
Compilation failed
c57e0fa
